# measure-twice

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
docs/methodology/: 01-deterministic-scoring-and-anchors.md  02-llm-judges.md
docs/research/: tier-skills-benchmark-map.md  workspace-bench-prior-art.md
measure_twice/: __init__.py  cli.py  config.py  report.py  runner.py  suite.py
measure_twice/adapters/: __init__.py  base.py  claude_cli.py  local.py
measure_twice/scoring/: __init__.py  deterministic.py  judge.py
suites/: smoke.json
tests/: conftest.py  test_adapters.py  test_config.py  test_judge.py  test_report.py  test_runner.py  test_scoring.py  test_suite.py
tests/anchors/: rubric_anchor.json  scorer_anchors.json  test_anchors_gate.py  test_rubric_anchor_gate.py
