[project]
name = "measure-twice"
version = "0.1.0"
description = "Local benchmarking toolkit + tier-claim evidence ledger: create, run, and interpret model benchmarks across the dev/ workspace."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["switchboard"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
mt = "measure_twice.cli:main"
measure-twice = "measure_twice.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["measure_twice"]

# switchboard is a sibling hatchling package; the agreement/kill math and defer taxonomy
# stay one-source-of-truth there (plan §8 D6). Path dep, not a published version.
[tool.uv.sources]
switchboard = { path = "../switchboard" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests: asserts are the point (S101).
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
